# QvPlugin-NaiveProxy

./: CMakeLists.txt  README.md  SimplePlugin.cpp  SimplePlugin.hpp  resx.qrc
.github/workflows/: build-simpleplugin-qt6.yml  build-simpleplugin.yml
core/: EventHandler.cpp  EventHandler.hpp  Kernel.cpp  Kernel.hpp  Serializer.cpp  Serializer.hpp
ui/: OutboundEditor.cpp  OutboundEditor.hpp  OutboundEditor.ui  SettingsWidget.cpp  SettingsWidget.hpp  SettingsWidget.ui  UIInterface.hpp
